--- a/sign_up.html
+++ b/sign_up.html
@@ -26,7 +26,7 @@
                 <br><br>
             <label for=""></label>
 
-            <input type="submit" value=Sigin >
+            <button type="submit">Sign up</button>
         </form>
         <a href="login.html">login Page</a>
     
